src/snapshots/redmine_tui_draft__test_support__journal_item_updated_on_none_placeholder.snap
---
source: src/test_support.rs
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 24, height: 9 }
00: "● aliceが (不 明 )に 更 新    " | 0:"●" fg=Rgb(74, 83, 102) bg=Rgb(46, 58, 85) mod=NONE, 1:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 2:"a" fg=Blue bg=Rgb(46, 58, 85) mod=NONE, 3:"l" fg=Blue bg=Rgb(46, 58, 85) mod=NONE, 4:"i" fg=Blue bg=Rgb(46, 58, 85) mod=NONE, 5:"c" fg=Blue bg=Rgb(46, 58, 85) mod=NONE, 6:"e" fg=Blue bg=Rgb(46, 58, 85) mod=NONE, 7:"が" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 9:"(" fg=Blue bg=Rgb(46, 58, 85) mod=NONE, 10:"不" fg=Blue bg=Rgb(46, 58, 85) mod=NONE, 12:"明" fg=Blue bg=Rgb(46, 58, 85) mod=NONE, 14:")" fg=Blue bg=Rgb(46, 58, 85) mod=NONE, 15:"に" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 17:"更" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 19:"新" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 21:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 22:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 23:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE
01: "│                       " | 0:"│" fg=Rgb(74, 83, 102) bg=Rgb(46, 58, 85) mod=NONE, 1:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 2:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 3:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 4:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 5:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 6:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 7:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 8:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 9:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 10:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 11:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 12:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 13:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 14:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 15:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 16:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 17:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 18:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 19:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 20:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 21:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 22:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 23:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE
02: "│   ・  担 当 者  を  (な し ) " | 0:"│" fg=Rgb(74, 83, 102) bg=Rgb(46, 58, 85) mod=NONE, 1:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 2:" " fg=Gray bg=Rgb(46, 58, 85) mod=NONE, 3:" " fg=Gray bg=Rgb(46, 58, 85) mod=NONE, 4:"・" fg=Gray bg=Rgb(46, 58, 85) mod=NONE, 6:" " fg=Gray bg=Rgb(46, 58, 85) mod=NONE, 7:"担" fg=Gray bg=Rgb(46, 58, 85) mod=BOLD, 9:"当" fg=Gray bg=Rgb(46, 58, 85) mod=BOLD, 11:"者" fg=Gray bg=Rgb(46, 58, 85) mod=BOLD, 13:" " fg=Gray bg=Rgb(46, 58, 85) mod=NONE, 14:"を" fg=Gray bg=Rgb(46, 58, 85) mod=NONE, 16:" " fg=Gray bg=Rgb(46, 58, 85) mod=NONE, 17:"(" fg=Gray bg=Rgb(46, 58, 85) mod=ITALIC, 18:"な" fg=Gray bg=Rgb(46, 58, 85) mod=ITALIC, 20:"し" fg=Gray bg=Rgb(46, 58, 85) mod=ITALIC, 22:")" fg=Gray bg=Rgb(46, 58, 85) mod=ITALIC, 23:" " fg=Gray bg=Rgb(46, 58, 85) mod=NONE
03: "│                       " | 0:"│" fg=Rgb(74, 83, 102) bg=Rgb(46, 58, 85) mod=NONE, 1:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 2:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 3:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 4:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 5:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 6:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 7:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 8:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 9:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 10:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 11:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 12:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 13:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 14:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 15:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 16:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 17:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 18:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 19:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 20:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 21:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 22:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 23:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE
04: "│ first paragraph       " | 0:"│" fg=Rgb(74, 83, 102) bg=Rgb(46, 58, 85) mod=NONE, 1:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 2:"f" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 3:"i" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 4:"r" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 5:"s" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 6:"t" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 7:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 8:"p" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 9:"a" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 10:"r" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 11:"a" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 12:"g" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 13:"r" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 14:"a" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 15:"p" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 16:"h" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 17:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 18:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 19:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 20:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 21:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 22:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 23:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE
05: "│                       " | 0:"│" fg=Rgb(74, 83, 102) bg=Rgb(46, 58, 85) mod=NONE, 1:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 2:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 3:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 4:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 5:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 6:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 7:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 8:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 9:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 10:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 11:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 12:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 13:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 14:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 15:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 16:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 17:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 18:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 19:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 20:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 21:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 22:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 23:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE
06: "│ second paragraph with " | 0:"│" fg=Rgb(74, 83, 102) bg=Rgb(46, 58, 85) mod=NONE, 1:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 2:"s" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 3:"e" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 4:"c" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 5:"o" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 6:"n" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 7:"d" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 8:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 9:"p" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 10:"a" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 11:"r" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 12:"a" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 13:"g" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 14:"r" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 15:"a" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 16:"p" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 17:"h" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 18:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 19:"w" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 20:"i" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 21:"t" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 22:"h" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 23:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE
07: "│ wrapping words        " | 0:"│" fg=Rgb(74, 83, 102) bg=Rgb(46, 58, 85) mod=NONE, 1:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 2:"w" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 3:"r" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 4:"a" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 5:"p" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 6:"p" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 7:"i" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 8:"n" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 9:"g" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 10:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 11:"w" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 12:"o" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 13:"r" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 14:"d" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 15:"s" fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 16:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 17:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 18:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 19:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 20:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 21:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 22:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 23:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE
08: "                        " | 0:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 1:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 2:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 3:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 4:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 5:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 6:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 7:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 8:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 9:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 10:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 11:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 12:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 13:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 14:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 15:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 16:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 17:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 18:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 19:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 20:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 21:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 22:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 23:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE
