src/snapshots/redmine_tui_draft__test_support__journals_list_clipped_create_button.snap
---
source: src/test_support.rs
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 32, height: 6 }
00: "aliceが 2026/01/15に 更 新          " | 0:"a" fg=Blue bg=Reset mod=NONE, 1:"l" fg=Blue bg=Reset mod=NONE, 2:"i" fg=Blue bg=Reset mod=NONE, 3:"c" fg=Blue bg=Reset mod=NONE, 4:"e" fg=Blue bg=Reset mod=NONE, 5:"が" fg=Reset bg=Reset mod=NONE, 7:"2" fg=Blue bg=Reset mod=NONE, 8:"0" fg=Blue bg=Reset mod=NONE, 9:"2" fg=Blue bg=Reset mod=NONE, 10:"6" fg=Blue bg=Reset mod=NONE, 11:"/" fg=Blue bg=Reset mod=NONE, 12:"0" fg=Blue bg=Reset mod=NONE, 13:"1" fg=Blue bg=Reset mod=NONE, 14:"/" fg=Blue bg=Reset mod=NONE, 15:"1" fg=Blue bg=Reset mod=NONE, 16:"5" fg=Blue bg=Reset mod=NONE, 17:"に" fg=Reset bg=Reset mod=NONE, 19:"更" fg=Reset bg=Reset mod=NONE, 21:"新" fg=Reset bg=Reset mod=NONE
01: "                                "
02: "                                "
03: "remote notes                    " | 0:"r" fg=Reset bg=Reset mod=NONE, 1:"e" fg=Reset bg=Reset mod=NONE, 2:"m" fg=Reset bg=Reset mod=NONE, 3:"o" fg=Reset bg=Reset mod=NONE, 4:"t" fg=Reset bg=Reset mod=NONE, 5:"e" fg=Reset bg=Reset mod=NONE, 7:"n" fg=Reset bg=Reset mod=NONE, 8:"o" fg=Reset bg=Reset mod=NONE, 9:"t" fg=Reset bg=Reset mod=NONE, 10:"e" fg=Reset bg=Reset mod=NONE, 11:"s" fg=Reset bg=Reset mod=NONE
04: "                                "
05: "┌──────────────────────────────┐" | 0:"┌" fg=LightGreen bg=Reset mod=NONE, 1:"─" fg=LightGreen bg=Reset mod=NONE, 2:"─" fg=LightGreen bg=Reset mod=NONE, 3:"─" fg=LightGreen bg=Reset mod=NONE, 4:"─" fg=LightGreen bg=Reset mod=NONE, 5:"─" fg=LightGreen bg=Reset mod=NONE, 6:"─" fg=LightGreen bg=Reset mod=NONE, 7:"─" fg=LightGreen bg=Reset mod=NONE, 8:"─" fg=LightGreen bg=Reset mod=NONE, 9:"─" fg=LightGreen bg=Reset mod=NONE, 10:"─" fg=LightGreen bg=Reset mod=NONE, 11:"─" fg=LightGreen bg=Reset mod=NONE, 12:"─" fg=LightGreen bg=Reset mod=NONE, 13:"─" fg=LightGreen bg=Reset mod=NONE, 14:"─" fg=LightGreen bg=Reset mod=NONE, 15:"─" fg=LightGreen bg=Reset mod=NONE, 16:"─" fg=LightGreen bg=Reset mod=NONE, 17:"─" fg=LightGreen bg=Reset mod=NONE, 18:"─" fg=LightGreen bg=Reset mod=NONE, 19:"─" fg=LightGreen bg=Reset mod=NONE, 20:"─" fg=LightGreen bg=Reset mod=NONE, 21:"─" fg=LightGreen bg=Reset mod=NONE, 22:"─" fg=LightGreen bg=Reset mod=NONE, 23:"─" fg=LightGreen bg=Reset mod=NONE, 24:"─" fg=LightGreen bg=Reset mod=NONE, 25:"─" fg=LightGreen bg=Reset mod=NONE, 26:"─" fg=LightGreen bg=Reset mod=NONE, 27:"─" fg=LightGreen bg=Reset mod=NONE, 28:"─" fg=LightGreen bg=Reset mod=NONE, 29:"─" fg=LightGreen bg=Reset mod=NONE, 30:"─" fg=LightGreen bg=Reset mod=NONE, 31:"┐" fg=LightGreen bg=Reset mod=NONE
